@@ -70,7 +70,7 @@
         <dependency>
             <groupId>io.netty</groupId>
             <artifactId>netty</artifactId>
-            <version>3.6.5.Final</version>
+            <version>3.5.3.Final</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
@@ -119,6 +119,9 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.12.2</version>
                 <configuration>
+                    <forkCount>1</forkCount>
+                    <reuseForks>true</reuseForks>
+                    <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
                     <useFile>false</useFile>
                 </configuration>
             </plugin>
